--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -22,12 +22,12 @@
 		<module>application</module>
 	</modules>
 	<scm>
-		<url>ssh://git@gitlab.formation.org:23/dthibau/multi-module.git</url>
+		<url>ssh://git@gitlab.formation.org/dthibau/multi-module.git</url>
 		<connection>
-            scm:git:ssh://git@gitlab.formation.org:23/dthibau/multi-module.git
+            scm:git:ssh://git@gitlab.formation.org/dthibau/multi-module.git
         </connection>
 		<developerConnection>
-            scm:git:ssh://git@gitlab.formation.org:23/dthibau/multi-module.git
+            scm:git:ssh://git@gitlab.formation.org/dthibau/multi-module.git
         </developerConnection>
 		<tag>HEAD</tag>
 	</scm>
