--- a/multi-module/application/pom.xml
+++ b/multi-module/application/pom.xml
@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>org.formation</groupId>
 		<artifactId>multi-module</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.2-SNAPSHOT</version>
 		<relativePath>..</relativePath> <!-- lookup parent from repository -->
 	</parent>
 	<dependencies>
 		<dependency>
 			<groupId>org.formation</groupId>
 			<artifactId>multi-module-library</artifactId>
-			<version>0.0.1</version>
+			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
