--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -16,6 +16,8 @@
 	<description>Product API and Web</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.exclusions>**/*Dto.java</sonar.exclusions>
+		<sonar.coverage.exclusions>**/org/formation/model/**</sonar.coverage.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
